--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "build:deno": "denoify",
     "start": "node ./dist/index.js",
+    "start:deno": "deno run --allow-read --allow-net --allow-env ./deno_dist/index.ts",
     "start:dev": "nodemon ./src/index.ts",
     "clean": "rimraf dist"
   },
@@ -19,6 +21,7 @@
     "@types/node": "^20.7.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
+    "denoify": "^1.6.4",
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
