--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "llama-node": "^0.1.6",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "nodejs-whisper": "^0.1.4",
     "revoice.js": "^0.1.7537",
     "revolt.js": "7.0.0-beta.9",
     "tiktok-tts": "^1.1.12",
