--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@discordjs/voice": "^0.16.0",
     "@types/better-sqlite3": "^7.6.5",
-    "@types/node": "^20.7.0",
+    "@types/node": "^20.7.1",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "denoify": "^1.6.4",
@@ -26,19 +26,20 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
     "nodemon": "^3.0.1",
-    "rimraf": "^5.0.4",
+    "rimraf": "^5.0.5",
     "tsx": "^3.13.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@llama-node/rwkv-cpp": "^0.1.6",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "bard-ai": "^2.0.3",
     "better-sqlite3": "^8.6.0",
     "bufferutil": "^4.0.7",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "erlpack": "^0.1.4",
+    "file-type": "^18.5.0",
     "llama-node": "^0.1.6",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
@@ -47,6 +48,7 @@
     "revolt.js": "7.0.0-beta.9",
     "tiktok-tts": "^1.1.12",
     "tslib": "^2.6.2",
+    "ulid": "^2.3.0",
     "utf-8-validate": "^6.0.3",
     "zlib-sync": "^0.1.8"
   }
