--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "llama-node": "^0.1.6",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "nodejs-whisper": "^0.1.4",
+    "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-1/nodejs-whisper-0.1.3.tgz",
     "revoice.js": "^0.1.7537",
     "revolt.js": "7.0.0-beta.9",
     "tiktok-tts": "github:V3L0C1T13S/tiktok-tts#alan-oss",
