--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-1/nodejs-whisper-0.1.3.tgz",
     "revoice.js": "^0.1.7537",
     "revolt.js": "7.0.0-beta.9",
+    "shoukaku": "^3.4.0",
     "tiktok-tts": "github:V3L0C1T13S/tiktok-tts#alan-oss",
     "tslib": "^2.6.2",
     "ulid": "^2.3.0",
