--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.7'
 
 services:
+  mongodb:
+    image: mongodb:7.0.2
+    container_name: mongodb
+    restart: unless-stopped
+    ports:
+      - 27017:27017
   alan-oss:
     build:
       context: .
