--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-2/nodejs-whisper-0.1.3.tgz",
+    "palm-api": "^1.1.1",
     "revoice.js": "^0.1.7537",
     "revolt.js": "7.0.0-beta.9",
     "shoukaku": "^3.4.2",
