--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "build:deno": "denoify",
     "start": "node ./dist/index.js",
-    "start:deno": "deno run --allow-read --allow-net --allow-env ./deno_dist/index.ts",
+    "start:deno": "deno run --allow-read --allow-net --allow-env --allow-ffi --allow-sys --allow-write ./deno_dist/index.ts",
     "start:dev": "nodemon ./src/index.ts",
     "clean": "rimraf dist"
   },
@@ -31,7 +31,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "bard-ai": "^2.0.3",
     "better-sqlite3": "^9.1.1",
     "bufferutil": "^4.0.8",
@@ -40,11 +40,11 @@
     "elizabot": "^0.0.3",
     "erlpack": "^0.1.4",
     "file-type": "^18.7.0",
-    "mongodb": "^6.2.0",
-    "mongoose": "^8.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-2/nodejs-whisper-0.1.3.tgz",
     "palm-api": "^1.1.1",
-    "revoice.js": "^0.1.7537",
+    "revoice.js": "^0.1.7541",
     "revolt.js": "7.0.0-beta.9",
     "shoukaku": "^3.4.2",
     "tiktok-tts": "github:V3L0C1T13S/tiktok-tts#alan-oss",
