--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@google-ai/generativelanguage": "^1.1.0",
     "axios": "^1.6.2",
     "bard-ai": "^2.0.3",
     "better-sqlite3": "^9.1.1",
@@ -40,9 +41,11 @@
     "elizabot": "^0.0.3",
     "erlpack": "^0.1.4",
     "file-type": "^18.7.0",
+    "google-auth-library": "^9.2.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-2/nodejs-whisper-0.1.3.tgz",
+    "openai": "^4.20.1",
     "palm-api": "^1.1.1",
     "revoice.js": "^0.1.7541",
     "revolt.js": "7.0.0-beta.9",
