--- a/package.json
+++ b/package.json
@@ -18,35 +18,36 @@
   "devDependencies": {
     "@discordjs/voice": "^0.16.1",
     "@types/better-sqlite3": "^7.6.8",
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@types/node": "^20.10.3",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "denoify": "^1.6.6",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
-    "tsx": "^4.4.0",
+    "tsx": "^4.6.2",
     "typescript": "^5.3.2"
   },
   "dependencies": {
     "@google-ai/generativelanguage": "^1.1.0",
     "axios": "^1.6.2",
     "bard-ai": "^2.0.3",
-    "better-sqlite3": "^9.1.1",
+    "better-sqlite3": "^9.2.2",
     "bufferutil": "^4.0.8",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "elizabot": "^0.0.3",
     "erlpack": "^0.1.4",
     "file-type": "^18.7.0",
-    "google-auth-library": "^9.2.0",
+    "google-auth-library": "^9.4.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.0.2",
     "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-2/nodejs-whisper-0.1.3.tgz",
     "openai": "^4.20.1",
     "palm-api": "^1.1.1",
+    "replicate": "^0.23.0",
     "revoice.js": "^0.1.7541",
     "revolt.js": "7.0.0-beta.9",
     "shoukaku": "^3.4.2",
