--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node ./dist/index.js",
     "start:deno": "deno run --allow-read --allow-net --allow-env --allow-ffi --allow-sys --allow-write ./deno_dist/index.ts",
     "start:dev": "nodemon ./src/index.ts",
+    "test:dev": "tsx ./src/tests/ai.ts",
     "clean": "rimraf dist"
   },
   "type": "module",
@@ -18,20 +19,19 @@
   "devDependencies": {
     "@discordjs/voice": "^0.16.1",
     "@types/better-sqlite3": "^7.6.8",
-    "@types/node": "^20.10.3",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "denoify": "^1.6.6",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.2"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@google-ai/generativelanguage": "^1.1.0",
     "axios": "^1.6.2",
     "bard-ai": "^2.0.3",
     "better-sqlite3": "^9.2.2",
@@ -43,14 +43,14 @@
     "file-type": "^18.7.0",
     "google-auth-library": "^9.4.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.2",
+    "mongoose": "^8.0.3",
     "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-2/nodejs-whisper-0.1.3.tgz",
-    "openai": "^4.20.1",
+    "openai": "^4.24.1",
     "palm-api": "^1.1.1",
     "replicate": "^0.23.0",
     "revoice.js": "^0.1.7541",
     "revolt.js": "7.0.0-beta.9",
-    "shoukaku": "^3.4.2",
+    "shoukaku": "^4.0.1",
     "tiktok-tts": "github:V3L0C1T13S/tiktok-tts#alan-oss",
     "tslib": "^2.6.2",
     "ulid": "^2.3.0",
