--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./dist/tests/ai.js",
     "build": "tsc",
     "build:deno": "denoify",
     "start": "node ./dist/index.js",
@@ -17,39 +17,52 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@discordjs/voice": "^0.16.1",
-    "@types/better-sqlite3": "^7.6.8",
-    "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "denoify": "^1.6.6",
+    "@types/better-sqlite3": "^7.6.9",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.11.17",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "denoify": "^1.6.9",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.1",
+    "@google-cloud/vertexai": "^0.2.1",
+    "@google/generative-ai": "^0.2.0",
+    "@octokit/rest": "^20.0.2",
+    "axios": "^1.6.7",
     "bard-ai": "^2.0.3",
-    "better-sqlite3": "^9.2.2",
+    "better-sqlite3": "^9.4.1",
     "bufferutil": "^4.0.8",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.2",
+    "elevenlabs-node": "^2.0.3",
     "elizabot": "^0.0.3",
     "erlpack": "^0.1.4",
-    "file-type": "^18.7.0",
-    "google-auth-library": "^9.4.1",
+    "file-type": "^19.0.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "google-auth-library": "^9.6.3",
+    "google-tts-api": "^2.0.2",
+    "libsodium-wrappers": "^0.7.13",
+    "lodash-es": "^4.17.21",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.3-patch-2/nodejs-whisper-0.1.3.tgz",
-    "openai": "^4.24.1",
+    "mongoose": "^8.1.2",
+    "nodejs-whisper": "https://github.com/V3L0C1T13S/nodejs-whisper/releases/download/0.1.4/nodejs-whisper-0.1.4.tgz",
+    "openai": "^4.27.0",
     "palm-api": "^1.1.1",
+    "playht": "^0.9.6",
+    "prism-media": "^1.3.5",
     "replicate": "^0.23.0",
-    "revoice.js": "^0.1.7541",
     "revolt.js": "7.0.0-beta.9",
+    "scrape-youtube": "^2.4.0",
     "shoukaku": "^4.0.1",
     "tiktok-tts": "github:V3L0C1T13S/tiktok-tts#alan-oss",
     "tslib": "^2.6.2",
